--- a/src/main/resources/com/example/informationsystem/windows/insert/med_diagnosis_desc.fxml
+++ b/src/main/resources/com/example/informationsystem/windows/insert/med_diagnosis_desc.fxml
@@ -4,14 +4,14 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="300.0" prefWidth="450.0" style="-fx-background-color: #024c68;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.informationsystem.controllers.insert.EmployeeCategoryInsertController">
+<AnchorPane prefHeight="300.0" prefWidth="450.0" style="-fx-background-color: #024c68;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.informationsystem.controllers.insert.MedicationDiagnosisDescriptionInsertController">
     <children>
         <VBox alignment="CENTER" layoutX="75.0" layoutY="5.0" prefHeight="300.0" prefWidth="300.0">
-            <Label text="Добавить категорию сотрудника" textFill="WHITE">
+            <Label text="Добавить краткое описание лекарства" textFill="WHITE">
                 <font>
                     <Font size="18.0" />
                 </font></Label>
-            <TextField fx:id="nameField" alignment="TOP_LEFT" prefHeight="40.0" prefWidth="300.0" promptText="Название категории">
+            <TextField fx:id="nameField" alignment="TOP_LEFT" prefHeight="40.0" prefWidth="300.0" promptText="Описание">
             </TextField>
 
             <Button fx:id="insertButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#insertButtonTapped" prefHeight="33.0" prefWidth="304.0" style="-fx-background-color: rgb(98,177,208);" text="Добавить" textFill="WHITE" />
