Resolved some issues

--- a/src/main/resources/com/example/informationsystem/windows/cashier/cashier_prescription_list.fxml
+++ b/src/main/resources/com/example/informationsystem/windows/cashier/cashier_prescription_list.fxml
@@ -17,6 +17,6 @@
       <Button layoutX="646.0" layoutY="84.0" mnemonicParsing="false" onAction="#updateSecondAttributesButtonTapped" text="Изменить другие параметры заказа" />
       <Pagination layoutX="603.0" layoutY="492.0" prefHeight="69.0" prefWidth="352.0" />
       <Label layoutX="35.0" layoutY="561.0" text="Помните порядок смены статуса:&#10;1. Ожидание доставки ингредиентов&#10;2. Ожидание оплаты&#10;3. В процессе приготовления&#10;4. Готов&#10;5. Завершен/Пропал&#10;" />
-      <Label layoutX="344.0" layoutY="561.0" text="Для готовых лекарств&#10;Ожидание оплаты -&gt; Готов&#10;Произойдет автоматически при попытке&#10;замены" />
+      <Label layoutX="344.0" layoutY="561.0" text="Для готовых лекарств&#10;Ожидание оплаты -&gt; Готов&#10;Произойдет автоматически при попытке&#10;замены статуса заказа" />
    </children>
 </AnchorPane>
