--- a/src/main/resources/com/example/informationsystem/windows/cashier/cashier_insert_patient.fxml
+++ b/src/main/resources/com/example/informationsystem/windows/cashier/cashier_insert_patient.fxml
@@ -4,23 +4,27 @@
 <?import javafx.scene.control.Pagination?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="759.0" prefWidth="770.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.informationsystem.controllers.base.cashier.CashierPatientInsertController">
     <children>
-
-        <TableView fx:id="tableViewPatient" layoutX="24.0" layoutY="68.0" prefHeight="200.0" prefWidth="660.0">
+      <Pane layoutX="24.0" layoutY="14.0">
+         <children>
+              <TableView fx:id="tableViewPatient" layoutY="54.0" prefHeight="200.0" prefWidth="660.0" tableMenuButtonVisible="true">
         </TableView>
-        <Button layoutX="24.0" layoutY="14.0" mnemonicParsing="false" onAction="#insertButtonPatientTapped" text="Добавить пациента" />
-        <Pagination fx:id="paginationPatient" layoutX="96.0" layoutY="268.0" prefHeight="64.0" prefWidth="417.0" />
-
-
-
-
-        <Pagination fx:id="paginationDoctor" layoutX="216.0" layoutY="611.0" prefHeight="78.0" prefWidth="200.0" />
-        <TableView fx:id="tableViewDoctor" layoutX="36.0" layoutY="422.0" prefHeight="200.0" prefWidth="653.0">
+              <Button mnemonicParsing="false" onAction="#insertButtonPatientTapped" text="Добавить пациента" />
+              <Pagination fx:id="paginationPatient" layoutX="72.0" layoutY="254.0" prefHeight="64.0" prefWidth="417.0" />
+            <Button layoutX="192.0" mnemonicParsing="false" onAction="#selectButtonPatientTapped" text="Найти пациента" />
+         </children>
+      </Pane>
+      <Pane layoutX="36.0" layoutY="373.0">
+         <children>
+              <Pagination fx:id="paginationDoctor" layoutX="180.0" layoutY="238.0" prefHeight="78.0" prefWidth="200.0" />
+              <TableView fx:id="tableViewDoctor" layoutY="49.0" prefHeight="200.0" prefWidth="653.0" tableMenuButtonVisible="true">
         </TableView>
-        <Button layoutX="36.0" layoutY="373.0" mnemonicParsing="false" onAction="#insertButtonDoctorTapped" text="Добавить врача" />
-                    
-
+              <Button mnemonicParsing="false" onAction="#insertButtonDoctorTapped" text="Добавить врача" />
+            <Button layoutX="149.0" mnemonicParsing="false" onAction="#selectButtonDoctorTapped" text="Найти врача" />
+         </children>
+      </Pane>
     </children>
 </AnchorPane>
