--- a/src/main/resources/com/example/informationsystem/windows/provider/provider_search_ingredient.fxml
+++ b/src/main/resources/com/example/informationsystem/windows/provider/provider_search_ingredient.fxml
@@ -9,7 +9,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="349.0" prefWidth="755.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.informationsystem.controllers.select.SelectIngredientController">
     <children>
         <Label layoutX="30.0" layoutY="46.0" text="Название ингредиента" />
-        <ComboBox fx:id="nameBox" layoutX="30.0" layoutY="67.0" prefWidth="150.0" />
+        <ComboBox fx:id="nameBox" editable="true" layoutX="30.0" layoutY="67.0" prefWidth="150.0" />
         <Label layoutX="30.0" layoutY="120.0" text="Кол-во на складе" />
         <Label layoutX="30.0" layoutY="185.0" text="Критическая норма на складе" />
         <Label layoutX="361.0" layoutY="46.0" text="Интервал цены" />
