--- a/src/main/resources/com/example/informationsystem/windows/provider/provider_search_recipe.fxml
+++ b/src/main/resources/com/example/informationsystem/windows/provider/provider_search_recipe.fxml
@@ -9,11 +9,11 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="349.0" prefWidth="755.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.informationsystem.controllers.select.SelectRecipeController">
     <children>
         <Label layoutX="30.0" layoutY="46.0" text="Название лек-ва" />
-        <ComboBox fx:id="nameBox" layoutX="30.0" layoutY="67.0" prefWidth="150.0" />
+        <ComboBox fx:id="nameBox" editable="true" layoutX="30.0" layoutY="67.0" prefWidth="150.0" />
         <Label layoutX="30.0" layoutY="120.0" text="Краткое описание диагноза" />
-        <ComboBox fx:id="shortDescBox" layoutX="30.0" layoutY="141.0" prefWidth="150.0" />
+        <ComboBox fx:id="shortDescBox" editable="true" layoutX="30.0" layoutY="141.0" prefWidth="150.0" />
         <Label layoutX="30.0" layoutY="185.0" text="Тип лек-ва" />
-        <ComboBox fx:id="typeOfMedBox" layoutX="30.0" layoutY="206.0" prefWidth="150.0" />
+        <ComboBox fx:id="typeOfMedBox" editable="true" layoutX="30.0" layoutY="206.0" prefWidth="150.0" />
         <Label layoutX="361.0" layoutY="46.0" text="Интервал цены" />
         <Button layoutX="351.0" layoutY="251.0" mnemonicParsing="false" onAction="#listButtonTapped" prefHeight="79.0" prefWidth="288.0" text="Найти" />
       <TextField fx:id="startPrice" layoutX="354.0" layoutY="67.0" prefHeight="31.0" prefWidth="70.0" />
