--- a/src/main/resources/com/example/informationsystem/windows/provider/provider_update_ready_medicine.fxml
+++ b/src/main/resources/com/example/informationsystem/windows/provider/provider_update_ready_medicine.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="300.0" prefWidth="450.0" style="-fx-background-color: #024c68;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.informationsystem.controllers.base.provider.ProviderReadyMedListUpdateMedicineInfoController">
+<AnchorPane prefHeight="420.0" prefWidth="450.0" style="-fx-background-color: #024c68;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.informationsystem.controllers.base.provider.ProviderReadyMedListUpdateMedicineInfoController">
     <children>
-        <VBox alignment="CENTER" layoutX="75.0" layoutY="5.0" prefHeight="352.0" prefWidth="300.0">
+        <VBox alignment="CENTER" layoutX="75.0" layoutY="5.0" prefHeight="402.0" prefWidth="300.0">
             <Label text="Добавить название лекарства" textFill="WHITE">
                 <font>
                     <Font size="18.0" />
@@ -24,7 +24,7 @@
          <Label text="Выберите описание" textFill="WHITE" />
          <ChoiceBox fx:id="medDiagnosisDescriptionBox" prefHeight="30.0" prefWidth="299.0" />
             <Label />
-            <Label text="Выберите: лекараство продается без рецепта или нет" textFill="WHITE" />
+            <Label prefHeight="173.0" prefWidth="300.0" text="Выберите: лекарство продается&#10;без рецепта?&#10;(галочка - продается,&#10;пустое поле - не продается)" textFill="WHITE" />
             <CheckBox fx:id="sellingWithoutPrescCheckBox" prefHeight="30.0" prefWidth="299.0" />
             <Label />
    
